PMD code convention fixes + adding all methods in AC decorator
git-svn-id: https://svn.kuali.org/repos/student/branches/ks-1.3@21638 0ac02d80-fb3f-11dc-a574-c57244a850eb